# Fabricdw

./: .gitignore  README.md  fabric-installer.py  pyproject.toml  requirements.in  requirements.txt
fabricdw/: __init__.py  __main__.py
fabricdw/args/: __init__.py
fabricdw/common/: __init__.py  config.py  methods.py  properties.py
fabricdw/installations/: __init__.py  change.py  copy.py  create.py  delete.py  fabric.py  import_.py  remove.py  update.py
fabricdw/installer/: __init__.py  installer.py
fabricdw/properties/: __init__.py  modify.py  properties.py
